--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
-    <title>The Last Pawn</title>
+    <title>The Pawn Gambit</title>
   </head>
   <body>
     <div id="root"></div>
